--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body {
 }
 .titulo {
   margin-bottom: 180px;
-  font-family: "Arial Narrow", Arial, sans-serif;
+  font-family: "Comic Sans MS", Arial, sans-serif;
   color: yellow;
   position: absolute;
   font-weight: bold;
