--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,8 @@ body {
 
 #lyrics {
   font-size: 28px;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: white;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
+  color: yellow;
   position: absolute;
   margin-bottom: 20%;
   z-index: 1;
